<resources>
    <string name="app_name">M Goal</string>
    <string name="free">FREE</string>
    <string name="home_top_ranking">RANKING</string>
    <string name="home_top_income">Reward</string>
    <string name="home_top_event">Events</string>
    <string name="home_top_event_new">New</string>
    <string name="home_top_cash_out">Redeem Gifts</string>
    <string name="start_tips">PRESENTED BY</string>
    <string name="start_tips2">PORTAL OLAHRAGA TERKINI</string>
    <string name="login_guest">Guest</string>
    <string name="request_loading">Loading</string>
    <string name="login_phone">Login</string>
    <string name="login_email">Email</string>
    <string name="guide_login_tips">Redeem Cash into Gifts and Vouchers</string>
    <string name="invite_reward_tips_tourist">Login and claim up to $%s cash</string>
    <string name="request_btn_retry">Retry</string>
    <string name="request_data_empty">No information</string>
    <string name="request_data_page_error">Network connection failed</string>
    <string name="btn_confirm">Confirm</string>
    <string name="user_info_title">My Account</string>
    <string name="view">View</string>
    <string name="my_level_title">Account Level</string>
    <string name="match_bet_tab_hot_events">Hot</string>
    <string name="match_bet_tab_score">Score</string>
    <string name="match_bet_tab_5m_goal">5M Goal</string>
    <string name="match_info">Match Info</string>
    <string name="login_email_create_account">Create New M Goal Account</string>
    <string name="login_forgot_psw">Forgot Password</string>
    <string name="btn_login">Login</string>
    <string name="login_email_hint_psw">Password</string>
    <string name="login_email_hint_email">Enter your email</string>
    <string name="login_tips_welcome">Welcome!</string>
    <string name="facebook_app_id">939892519903839</string>
    <string name="fb_login_protocol_scheme">fb939892519903839</string>
    <string name="mgoal_games">MGoal Games</string>
    <string name="match_list_screen_determine">Confirm</string>
    <string name="match_list_screen_top_five">Top Five</string>
    <string name="match_list_screen_reverse">Reverse</string>
    <string name="match_list_screen_all">All</string>
    <string name="match_list_screen_hint">Search</string>
    <string name="not_started">Not started</string>
    <string name="first_half">First half</string>
    <string name="half_time_break">Half-time break</string>
    <string name="second_half">Second half</string>
    <string name="extra_time">Extra time</string>
    <string name="penalty">Penalty</string>
    <string name="finished">Finished</string>
    <string name="cancelled">Cancelled</string>
    <string name="tbd">TBD</string>
    <string name="terminated">Terminated</string>
    <string name="interrupted">Interrupted</string>
    <string name="postponed">Postponed</string>
    <string name="not_found">Not Found</string>
    <string name="match_list_tv_away">2</string>
    <string name="match_list_tv_draw">X</string>
    <string name="match_list_tv_follow">Follow</string>
    <string name="match_list_tv_following">Following</string>
    <string name="match_list_tv_home">1</string>
    <string name="match_list_tv_match_events">More Markets ></string>
    <string name="match_list_tv_match_odds">Match Odds</string>
    <string name="match_list_tv_suspended">Suspended</string>
    <string name="plz_enjoy_super_cup_24_7">Plz enjoy Super Cup 24/7!</string>
    <string name="no_in_play_matches_currently">No In-Play matches currently.</string>
    <string name="no_information">No information</string>
    <string name="select_a_match_from_the_list">Select a match from the list</string>
    <string name="go">Go</string>
    <string name="stake">Stake</string>
    <string name="to_win">To Win:</string>
    <string name="guide_match_bet_tips_menu">You can view the match data here</string>
</resources>