<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res"
    xmlns:appauto="http://schemas.android.com/apk/res-auto"
    android:id="@id/layout_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ff162750"
    android:orientation="vertical">

    <LinearLayout
        android:id="@id/layout_top"
        android:layout_width="fill_parent"
        android:layout_height="132.0dip"
        android:orientation="vertical">

        <include
            layout="@layout/include_match_list_top_layout"
            android:layout_width="fill_parent"
            android:layout_height="46.0dip" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="58.0dip"
            android:orientation="horizontal">

            <com.google.android.material.tabs.TabLayout
                android:id="@id/match_list_sliding_tab"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1.0"
                appauto:tabMode="fixed"
                appauto:tabIndicatorGravity="bottom"
                appauto:tabTextColor="@color/white"
                appauto:tabSelectedTextColor="@color/white"
                appauto:tabIndicatorAnimationMode="elastic"
                appauto:tabIndicator="@mipmap/transaction_top_txt_line"
                appauto:tabIndicatorColor="@color/white"/>

            <ImageView
                android:id="@id/match_list_btn_screen"
                android:layout_width="54.0dip"
                android:layout_height="58.0dip"
                android:layout_gravity="center_vertical"
                android:padding="14.0dip"
                android:src="@mipmap/match_list_icon_screening_nor" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="2.0dip"
            android:background="#ff080e1d" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="4.0dip"
            android:background="#ff122451" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/layout_banner"
        android:layout_below="@id/layout_top"
        android:background="@color/white">
        <!--        android:background="#ff172e67">-->
        <androidx.viewpager.widget.ViewPager
            android:id="@id/match_list_view_pager"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@id/match_list_layout_screen"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_below="@id/layout_top"
        android:layout_marginTop="-20.0dip"
        android:orientation="vertical"
        android:visibility="gone">

        <RelativeLayout
            android:id="@id/match_list_layout_screen_consume_event"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" />

        <LinearLayout
            android:id="@id/match_list_layout_screen_content"
            android:layout_width="390.0dip"
            android:layout_height="565.0dip"
            android:layout_alignParentEnd="true"
            android:background="@mipmap/img_score_screen_pop_bg"
            android:orientation="vertical"
            android:paddingStart="20.0dip"
            android:paddingTop="30.0dip"
            android:paddingEnd="20.0dip">

            <LinearLayout
                android:id="@id/match_list_layout_screen_search"
                android:layout_width="fill_parent"
                android:layout_height="60.0dip"
                android:background="@mipmap/img_score_filter_search_bg"
                android:paddingStart="16.0dip"
                android:paddingTop="10.0dip"
                android:paddingEnd="16.0dip"
                android:paddingBottom="10.0dip">

                <EditText
                    android:id="@id/match_list_edt_screen"
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="5.0dip"
                    android:layout_weight="1.0"
                    android:background="@null"
                    android:hint="@string/match_list_screen_hint"
                    android:textColor="@color/font_color_080e1d"
                    android:textColorHint="#ff66e8ff"
                    android:textSize="16.0dip" />

                <ImageView
                    android:id="@id/match_list_layout_screen_iv_clear"
                    android:layout_width="40.0dip"
                    android:layout_height="40.0dip"
                    android:layout_marginEnd="10.0dip"
                    android:padding="10.0dip"
                    android:src="@mipmap/img_score_close"
                    android:visibility="gone" />

                <ImageView
                    android:id="@id/match_list_layout_screen_iv_search"
                    android:layout_width="19.0dip"
                    android:layout_height="19.0dip"
                    android:layout_gravity="center_vertical"
                    android:src="@mipmap/filter_search_icon" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="49.0dip"
                android:layout_marginTop="20.0dip">

                <TextView
                    android:id="@id/match_list_screen_tv_all"
                    android:layout_width="0.0dip"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1.0"
                    android:background="@mipmap/img_score_screen_btn_sel"
                    android:gravity="center"
                    android:text="@string/match_list_screen_all"
                    android:textColor="@color/white"
                    android:textSize="20.0dip" />

                <TextView
                    android:id="@id/match_list_screen_tv_reverse"
                    android:layout_width="0.0dip"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="12.0dip"
                    android:layout_weight="1.0"
                    android:background="@mipmap/img_score_screen_btn_nor"
                    android:gravity="center"
                    android:text="@string/match_list_screen_reverse"
                    android:textColor="@color/white"
                    android:textSize="20.0dip" />

                <TextView
                    android:id="@id/match_list_screen_tv_top_five"
                    android:layout_width="0.0dip"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="12.0dip"
                    android:layout_weight="1.0"
                    android:background="@mipmap/img_score_screen_btn_nor"
                    android:gravity="center"
                    android:text="@string/match_list_screen_top_five"
                    android:textColor="@color/white"
                    android:textSize="20.0dip" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@id/match_list_screen_rv"
                android:layout_width="fill_parent"
                android:layout_height="0.0dip"
                android:layout_marginTop="25.0dip"
                android:layout_weight="1.0" />

            <TextView
                android:id="@id/match_list_screen_btn_determine"
                android:layout_width="fill_parent"
                android:layout_height="87.0dip"
                android:layout_marginBottom="2.0dip"
                android:background="@mipmap/btn_blue"
                android:gravity="center"
                android:text="@string/match_list_screen_determine"
                android:textSize="25.0sp"
                app:boder_color="#ff080e1d"
                app:boder_width="2.0dip" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@id/layout_banner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical" />
</RelativeLayout>